<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">练习计时器</string>
    <string name="add_timer">添加计时器</string>
    <string name="timer_name">计时器名称</string>
    <string name="add_subtimer">添加阶段</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="reset">重置</string>
    <string name="back">返回</string>
    <string name="no_timers">还没有创建计时器</string>
    <string name="create_first_timer">点击右上角添加按钮创建第一个计时器</string>
    <string name="timer_running">计时器运行中</string>
    <string name="status_running">●</string>
    <string name="status_current">▶</string>
    <string name="status_completed">✓</string>
    <string name="confirm_delete">确定要删除这个计时器吗？</string>
    <string name="subtimer_name">阶段名称</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
</resources>